<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/green_bg">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/clear_template"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/back_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="12dp"
        android:scrollbars="none"
        android:background="@drawable/rounded_clear_half_box"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="40dp"
                android:paddingEnd="0dp"
                android:paddingTop="40dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/example_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/example_phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/example_firstname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/example_lastname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/example_address" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:textColorHint="#A8A8A8"
                app:boxBackgroundMode="none">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_clear_box"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:paddingTop="30dp"
                android:paddingBottom="20dp"
                android:text="@string/town_question"
                android:textColor="#939393"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:scaleX="0.96"
                android:scaleY="0.96"
                android:text="@string/terms_and_services"
                android:textColor="#474747" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_clear_box"
                android:backgroundTint="#899769"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:text="@string/sign_in_link"
                android:textAlignment="textEnd"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
